--- a/www/view/login/login.html
+++ b/www/view/login/login.html
@@ -16,7 +16,7 @@
         <button class="button button-energized button-block" ng-click="login">登录</button>
       </div>
       <div class="col col-50 padding-left">
-        <button class="button button-energized button-outline button-block">登录</button>
+        <button class="button button-energized button-outline button-block">注册新账号</button>
       </div>
     </div>
     <div class="row">
