--- a/www/view/login/login.html
+++ b/www/view/login/login.html
@@ -4,19 +4,19 @@
     <div class="list list-inset">
       <label class="item item-input">
         <span class="input-label">帐号</span>
-        <input type="text" placeholder="手机号或者电子邮箱" ng-model="loginData.username">
+        <input type="text" placeholder="手机号或者电子邮箱" ng-model="user.username">
       </label>
       <label class="item item-input" style="margin-top:20px;">
         <span class="input-label">密码</span>
-        <input type="password" placeholder="您的生意专家登录密码" ng-model="loginData.password">
+        <input type="password" placeholder="您的生意专家登录密码" ng-model="user.password">
       </label>
     </div>
     <div class="row">
       <div class="col col-50 padding-right">
-        <button class="button button-energized button-block" ng-click="login">登录</button>
+        <button class="button button-energized button-block" ng-click="login()">登录</button>
       </div>
       <div class="col col-50 padding-left">
-        <button class="button button-energized button-outline button-block">注册新账号</button>
+        <button class="button button-energized button-outline button-block">注册</button>
       </div>
     </div>
     <div class="row">
