--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,14 +3,14 @@
   margin-left:10px;
 }
 
-.menu-side li{
+.side-menu li{
   border-left: none;
 }
 
 .side-background{
   background-color: rgb(78,78,78);
 }
-.menu-side li i{
+.side-menu li i{
   font-size:medium!important;
 }
 
