新增商品界面完成

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -49,3 +49,10 @@
   margin-left:40%;
   width:60%
 }
+
+.active-item{
+  background-color:#fff;
+  border-left-color: #ff6a3c;
+  border-left-width: 4px;
+  border-left-style:solid;
+}
