--- a/www/view/category/category-list.html
+++ b/www/view/category/category-list.html
@@ -1,8 +1,9 @@
+<ion-view view-title="商品">
 <ion-nav-buttons side="right">
-  <a class="button button-icon button-clear ion-ios-plus-empty " href="#"></a>
+  <a class="button button-icon button-clear ion-ios-plus-empty " href="#/app/category-add/0/"></a>
 </ion-nav-buttons>
 
-<ion-content class="stable-bg catagory-content-left">
+<ion-content style="width: 40%" class="stable-bg">
   <ul class="list">
     <li class="item stable-bg">大类别</li>
     <li class="item stable-bg" ng-repeat="category in categories" ng-click="selectCategory($index)"
@@ -11,7 +12,7 @@
     </li>
   </ul>
 </ion-content>
-<ion-content class="light-bg category-content-right">
+<ion-content class="light-bg" style="margin-left: 40%;width: 60%;">
   <ul class="list">
     <li class="item">小类别</li>
     <li class="item">无小分类进入大分类</li>
@@ -22,10 +23,11 @@
   <button class="button button-positive button-clear icon-left ion-plus-circled"
           ng-click="gotoCategoryAdd()">新增小分类</button>
 </ion-content>
-<div class="bar bar-footer row-center category-content-right-footer" >
+<div class="bar bar-footer row-center" style="margin-left: 40%;width: 60%;" >
   <span ng-show="activeCategory.Children.length==0">目前没有小分类</span>
   <span ng-if="activeCategory.Children.length>0">共{{activeCategory.Children.length}}种商品分类</span>
   <button class="button button-icon stable-border button-small ion-android-more-horizontal
   pull-right" ng-click="showActionSheet()"></button>
 
   </div>
+</ion-view>
