--- a/www/css/style.css
+++ b/www/css/style.css
@@ -52,7 +52,7 @@
 
 .active-item{
   background-color:#fff;
-  border-left-color: #ff6a3c;
+  border-left-color: #ff6A3C;
   border-left-width: 4px;
   border-left-style:solid;
 }
