Setting页面及控制器设置完成
修改密码（无法更改本地储存）
关于我们（无法读取TXT）
安全退出（退出至Login界面）

--- a/www/view/changepassword/changepassword.html
+++ b/www/view/changepassword/changepassword.html
@@ -15,7 +15,7 @@
       </label>
     </div>
     <div class="padding">
-      <button class="button button-energized button-block">提交</button>
+      <button class="button button-energized button-block" ui-sref="app.setting">提交</button>
     </div>
   </ion-content>
 </ion-view>
