--- a/www/view/setting/setting.html
+++ b/www/view/setting/setting.html
@@ -1,19 +1,19 @@
 <ion-view view-title="店铺设置">
-  <ion-nav-button side="left">
-    <a class="button button-clear button-icon ion-ios-arrow-back" ng-click="goBack()"></a>
-  </ion-nav-button>
+  <ion-nav-buttons side="right">
+    <a class="button button-icon button-clear ion-ios-arrow-thin-left " ng-click="goBack"></a>
+  </ion-nav-buttons>
   <ion-content>
     <div class="list list-inset">
       <a class="item item-icon-right">
         店铺设置<i class="icon ion-chevron-right icon-accessory"></i>
       </a>
-      <a class="item item-icon-right">
-        密码<i class="icon ion-chevron-right icon-accessory"></i>
+      <a class="item item-icon-right" ui-sref="app.changepassword">
+        密码<i class="icon ion-chevron-right icon-accessory" ></i>
       </a>
     </div>
 
     <div class="list list-inset">
-      <a class="item item-icon-right">
+      <a class="item item-icon-right" ui-sref="app.about">
         关于我们
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="list list-inset">
-      <a class="item item-icon-right">
+      <a class="item item-icon-right" ui-sref="login">
         安全退出
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
