--- a/www/view/home/home.html
+++ b/www/view/home/home.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row row-wrap row-no-padding">
       <div class="col col-25 col-border quick-action-item">
-        <a class="tab-item shortcut" href="">
+        <a class="tab-item shortcut" ui-sref="app.category-list">
           <i class="icon ion-ios-bookmarks ion-android-apps energized"></i>
           <h5>新增商品</h5>
         </a>
