--- a/www/view/menu/menu.html
+++ b/www/view/menu/menu.html
@@ -75,8 +75,8 @@
       </ion-list> -->
     </ion-content>
     <ion-footer-bar class="bar-dark" style="background-color: rgb(78,78,78)">
-      <a class="button button-clear button-light" style="margin-top:-12px;"menu-close>
-        <i class="icon ion-ios-gear light"></i>&nbsp;&nbsp;设置
+      <a class="button button-clear button-light"  ui-sref="app.setting" style="margin-top:-12px;"menu-close >
+        <i class="icon ion-ios-gear light" ></i>&nbsp;&nbsp;设置
       </a>
     </ion-footer-bar>
     <!--<div class="bar bar-footer bar-dark">-->
