--- a/www/view/setting/setting.html
+++ b/www/view/setting/setting.html
@@ -1,6 +1,6 @@
 <ion-view view-title="店铺设置">
-  <ion-nav-buttons side="right">
-    <a class="button button-icon button-clear ion-ios-arrow-thin-left " ng-click="goBack"></a>
+  <ion-nav-buttons side="left">
+    <a class="button button-icon button-clear ion-ios-arrow-thin-left " ng-click="goBack()"></a>
   </ion-nav-buttons>
   <ion-content>
     <div class="list list-inset">
