--- a/www/view/home/home.html
+++ b/www/view/home/home.html
@@ -1,6 +1,6 @@
 <ion-view view-title="首页">
   <ion-nav-buttons side="right">
-    <a class="button button-icon button-clear ion-ios-plus-empty " href="#"></a>
+    <a class="button button-icon button-clear ion-ios-plus-empty " ui-sref="app.category-list"></a>
   </ion-nav-buttons>
   <ion-content>
 
@@ -24,7 +24,7 @@
     </div>
     <div class="row row-wrap row-no-padding">
       <div class="col col-25 col-border quick-action-item">
-        <a class="tab-item shortcut" ui-sref="app.category-list">
+        <a class="tab-item shortcut" ui-sref="app.product-add">
           <i class="icon ion-ios-bookmarks ion-android-apps energized"></i>
           <h5>新增商品</h5>
         </a>
