--- a/www/view/product/product-add.html
+++ b/www/view/product/product-add.html
@@ -11,7 +11,7 @@
           <span class="input-label">条码</span>
           <input type="number" placeholder="输入商品条码">
         </label>
-        <i class="icon ion-qr-scanner energized" ng-click="scanBarcode()"></i>
+        <i class="icon ion-qr-scanner energized" ></i>
       </div>
 
       <label class="item item-input" for="">
