--- a/www/view/product/product-add.html
+++ b/www/view/product/product-add.html
@@ -4,7 +4,7 @@
 
       <div class="item item-thumbnail-left item-icon-right stable-bg">
         <img src="view/product/img/supplier_icon.png">
-        <i class="icon"><h6>上传照片</h6></i>
+        <i class="icon" ng-click="showActionSheet()"><h6>上传照片</h6></i>
       </div>
       <div class="item item-input item-icon-right">
         <label style="display:flex; width: 100%;padding-top:2px;padding-bottom: 2px;">
