--- a/www/view/product/product-list.html
+++ b/www/view/product/product-list.html
@@ -7,7 +7,9 @@
     </label>
   </ion-header-bar>
 
+
   <ion-content class="has-subheader">
+    <ion-refresher on-refresh="doRefresh()" pulling-text="下拉可以刷新" refreshing-text="正在加载中……"></ion-refresher>
     <div class="row row-center" style="justify-content: space-between;">
       总共库存{{'10'}}件,总成本{{'350.00'}}元
       <div class="buttons">
