修改密码界面
10-13 15-27-52

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -20,4 +20,4 @@ $energized:                       #FF6A3C !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
-
+@import "www/css/commom.scss";
