--- a/www/view/home/home.html
+++ b/www/view/home/home.html
@@ -48,7 +48,7 @@
         </a>
       </div>
       <div class="col col-25 col-border quick-action-item">
-        <a class="tab-item shortcut" href="">
+        <a class="tab-item shortcut" ui-sref="app.product-list">
           <i class="icon ion-ios-grid-view ion-android-apps energized"></i>
           <h5>商品管理</h5>
         </a>
