修改密码完成（BUG修复成功）

--- a/www/view/changepassword/changepassword.html
+++ b/www/view/changepassword/changepassword.html
@@ -1,5 +1,3 @@
-
-
 <ion-view view-title="修改密码">
   <form name="changePasswordForm" novalidate>
     <ion-content>
@@ -18,18 +16,23 @@
         </label>
       </div>
       <div class="padding">
-        <button type="submit" class="button button-energized button-block" ng-click="save()" ng-disabled="changePasswordForm.$invalid">确定</button>
+        <button type="submit" class="button button-energized button-block" ng-click="save()">确定</button>
       </div>
     </ion-content>
+
+    <div class="toast-container active"
+         ng-messages="changePasswordForm.oldPassword.$error" ng-if="changePasswordForm.oldPassword.$touched||changePasswordForm.$submitted">
+      <p class="toast-message" ng-message="required">旧密码必填</p>
+    </div>
     <div class="toast-container active"
          ng-messages="changePasswordForm.password.$error" ng-if="changePasswordForm.password.$touched||changePasswordForm.$submitted">
       <p class="toast-message" ng-message="required">新密码必填</p>
-      <p ng-message="minlength||maxlength">新密码6位至16位</p>
+      <p class="toast-message" ng-message="minlength,maxlength">新密码6位至16位</p>
     </div>
     <div class="toast-container active"
-         ng-message="changePasswordForm.confirmPassword.$error" ng-if="changePasswordForm.password.$touched||changePasswordForm.$submitted">
-      <p class="toast-message" ng-message="required"></p>
-      <p class="toast-message"  ng-message="equalto"></p>
+         ng-messages="changePasswordForm.confirmPassword.$error" ng-if="changePasswordForm.confirmPassword.$touched||changePasswordForm.$submitted">
+      <p class="toast-message" ng-message="required">确认密码必填</p>
+      <p class="toast-message" ng-message="equalto">密码不一致</p>
     </div>
   </form>
 </ion-view>
