--- a/www/view/changepassword/changepassword.html
+++ b/www/view/changepassword/changepassword.html
@@ -12,7 +12,7 @@
         </label>
         <span class="input-label">请再输入一次</span>
         <label for="" class="item item-input">
-          <input name="confirmPassword" type="password" ng-model="user.confirmPassword">
+          <input name="confirmPassword" type="password" ng-model="user.confirmPassword" equalto="user.password">
         </label>
       </div>
       <div class="padding">
