--- a/www/view/product/product-add.html
+++ b/www/view/product/product-add.html
@@ -28,7 +28,7 @@
     <div class="list">
       <label class="item item-input" for="">
         <span class="input-label">售价<span class="energized">*</span></span>
-        <input type="text">
+        <input name="price" type="text" placeholder="输入商品售价" ng-model="product.Price" ng-patten="/^\d+(.\d{1,2})?$/">
       </label>
       <label class="item item-input" for="">
         <span class="input-label">进价<span class="energized">*</span></span>
