--- a/www/view/setting/setting.html
+++ b/www/view/setting/setting.html
@@ -7,8 +7,9 @@
       <a class="item item-icon-right">
         店铺设置<i class="icon ion-chevron-right icon-accessory"></i>
       </a>
-      <a class="item item-icon-right" ui-sref="app.changepassword">
-        密码<i class="icon ion-chevron-right icon-accessory" ></i>
+      <a class="item item-icon-right" ui-sref="app.changepassowrd">
+        密码
+        <i class="icon ion-chevron-right icon-accessory" ></i>
       </a>
     </div>
 
