--- a/www/view/home/home.html
+++ b/www/view/home/home.html
@@ -91,7 +91,9 @@
       </div>
     </div>
   </ion-content>
-  <<div class="bar bar-footer" style="background-image: none;">
-    <h1 class="title">?2010-2016 生意专家</h1>
+  <company-directive bottom="5px">
+  <div class="bar bar-footer" style="background-image: none;">
+    <h1 class="title">©2010-2016 生意专家</h1>
   </div>
+  </company-directive>
 </ion-view>
