--- a/www/view/setting/setting.html
+++ b/www/view/setting/setting.html
@@ -4,7 +4,7 @@
   </ion-nav-buttons>
   <ion-content>
     <div class="list list-inset">
-      <a class="item item-icon-right">
+      <a class="item item-icon-right" ui-sref="app.shop">
         店铺设置<i class="icon ion-chevron-right icon-accessory"></i>
       </a>
       <a class="item item-icon-right" ui-sref="app.changepassowrd">
